# ee_524

./: readme.md
hw1/: CMakeLists.txt  homework1.md  main.cu
hw1/include/: check_cuda.h  matrix_2d_add.cuh  matrix_3d_add.cuh
hw2/: CMakeLists.txt
hw2/apps/: hw2_starter.cu
hw2/kernels/include/: addKernel.cuh
hw2/kernels/source/: addKernel.cu
hw2_vs/CudaRuntime1/: CMakeLists.txt  CudaRuntime1.sln  CudaRuntime1.vcxproj  readme.md
hw2_vs/CudaRuntime1/apps/: hw2_starter.cu  main.cpp
hw3/: CMakeLists.txt  main.cu  readme.md
hw3/CudaRuntime1/CudaRuntime1/: kernel.cu
